--- a/.github/workflows/change-approve.yml
+++ b/.github/workflows/change-approve.yml
@@ -9,6 +9,22 @@ jobs:
     runs-on: ubuntu-latest
     environment: production
     steps:
-      - run: echo "APPROVED ${{ inputs.intent }}"; echo "${{ inputs.token }}" > /tmp/approval.token
+      - name: Prepare approval artifacts
+        env:
+          CHANGE_APPROVAL_SECRET: ${{ secrets.CHANGE_APPROVAL_SECRET }}
+        run: |
+          set -euo pipefail
+          if [ -z "${CHANGE_APPROVAL_SECRET:-}" ]; then
+            echo "Missing CHANGE_APPROVAL_SECRET" >&2
+            exit 1
+          fi
+          echo "APPROVED ${{ inputs.intent }}"
+          printf '%s' "${{ inputs.token }}" > /tmp/approval.token
+          signature=$(printf '%s' "${{ inputs.token }}" | openssl dgst -sha256 -hmac "$CHANGE_APPROVAL_SECRET" | awk '{print $2}')
+          printf '%s' "$signature" > /tmp/approval.signature
       - uses: actions/upload-artifact@v4
-        with: { name: approval-token, path: /tmp/approval.token }
+        with:
+          name: approval-token
+          path: |
+            /tmp/approval.token
+            /tmp/approval.signature
