--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,8 +10,6 @@
   },
   "dependencies": {
     "axios": "^1.7.2",
-    "react-router-dom": "^6.30.1",
-    "react-router-dom": "^6.23.0",
     "lucide-react": "^0.460.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -23,6 +21,7 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "autoprefixer": "^10.4.19",
+    "@vitejs/plugin-react": "^4.3.1",
     "postcss": "^8.4.40",
     "tailwindcss": "^3.4.9",
     "vite": "^5.2.0",
