Add compliance harness loader and Slack notifier

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,8 @@ OKTA_REDIRECT_URI=https://blackroad.io/api/auth/okta/callback
 # Data warehouse
 WAREHOUSE_URL=
 WAREHOUSE_TOKEN=
+
+# Slack notifications
+SLACK_WEBHOOK_URL=
+SLACK_BOT_TOKEN=
+SLACK_CHANNEL=#secops
