--- a/rules/mirror_class_limit.yaml
+++ b/rules/mirror_class_limit.yaml
@@ -1,22 +1,50 @@
+rule_id: MIRROR_CLASS_LIMIT
 id: MIRROR_CLASS_LIMIT
+name: Mirror class limit
+description: Block mirrors on restricted or secret repositories.
+category: enforce
 mode: enforce
 severity: high
+version: 1
 block_on_error: true
 metadata:
   runbook: docs/runbooks/mirror_class_limit.md
   summary: Block mirrors on restricted or secret repositories.
   block_message: "Blocked by policy MIRROR_CLASS_LIMIT. Reason: repo classified '{resource_class}'. See runbook for exception steps."
 expr: action == "mirror" && (resource_class == "restricted" || resource_class == "secret")
+on_match:
+  decision: deny
+  reason: mirror_restricted_repo
+  details:
+    message: "Blocked by policy MIRROR_CLASS_LIMIT. Reason: repo classified '{resource_class}'. See runbook for exception steps."
+    remediation: Request a reclassification or exception through the security runbook.
+notify:
+  channels:
+    - "#secops"
 tests:
   - name: deny_secret
-    input: { action: "mirror", resource_class: "secret", repo: "api/core" }
-    want: true
+    input:
+      action: mirror
+      resource_class: secret
+      repo: api/core
+    want:
+      decision: deny
   - name: deny_restricted
-    input: { action: "mirror", resource_class: "restricted", repo: "ml/labs" }
-    want: true
+    input:
+      action: mirror
+      resource_class: restricted
+      repo: ml/labs
+    want:
+      decision: deny
   - name: allow_internal
-    input: { action: "mirror", resource_class: "internal" }
-    want: false
+    input:
+      action: mirror
+      resource_class: internal
+    want:
+      decision: allow
   - name: allow_other_action
-    input: { action: "deploy", resource_class: "secret" }
-    want: false
+    input:
+      action: deploy
+      resource_class: secret
+    want:
+      decision: allow
