--- a/rules/secret_expiry_cluster.yaml
+++ b/rules/secret_expiry_cluster.yaml
@@ -1,10 +1,24 @@
+rule_id: SECRET_EXPIRY_CLUSTER
 id: SECRET_EXPIRY_CLUSTER
+name: Secret expiry cluster
+description: Cluster secret-expired errors to trigger automated rotation.
+category: observe
 mode: observe
 severity: high
 metadata:
   product: Secret Hygiene
   description: Cluster secret-expired errors to trigger automated rotation.
 expr: rate(error_kind == "secret_expired", "10m") >= 0.3
+on_match:
+  decision: notify
+  reason: secret_expiry_cluster
+  details:
+    message: Multiple secret expirations detected within 10 minutes.
+    remediation: Trigger automated rotation for affected secrets and investigate upstream causes.
+notify:
+  channels:
+    - "#secops"
+    - "#platform-alerts"
 tests:
   - name: ok_fixture
     fixture: secret/ok.series.json
