--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "node": ">=20"
   },
   "dependencies": {
+    "ajv": "^8.17.1",
+    "ajv-formats": "^3.0.1",
     "bcrypt": "^5.1.1",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
