--- a/package.json
+++ b/package.json
@@ -29,40 +29,42 @@
     "node": ">=20"
   },
   "dependencies": {
+    "@aws-sdk/client-cloudwatch": "^3.907.0",
     "ajv": "^8.17.1",
     "ajv-formats": "^3.0.1",
     "bcrypt": "^5.1.1",
+    "better-sqlite3": "^9.4.3",
     "cookie-session": "^2.0.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
+    "ethers": "^6.10.0",
     "express": "^4.19.2",
     "express-rate-limit": "^7.2.0",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.0",
     "next": "^14.2.5",
-    "socket.io": "^4.7.5",
-    "systeminformation": "^5.25.11",
-    "uuid": "^9.0.1",
-    "better-sqlite3": "^9.4.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "socket.io": "^4.7.5",
     "stripe": "^12.18.0",
-    "ethers": "^6.10.0",
+    "swr": "^2.3.6",
+    "systeminformation": "^5.25.11",
+    "uuid": "^9.0.1",
     "yaml": "^2.3.4"
   },
   "devDependencies": {
-    "nodemon": "^3.0.2",
-    "jest": "^29.7.0",
-    "supertest": "^6.3.4",
-    "cross-env": "^7.0.3",
-    "eslint": "^9.12.0",
-    "prettier": "^3.3.3",
-    "husky": "^9.0.10",
-    "lint-staged": "^16.1.5",
     "@types/node": "^20.14.9",
     "@types/node-fetch": "^2.6.11",
     "@types/react": "^18.2.64",
+    "cross-env": "^7.0.3",
+    "eslint": "^9.12.0",
+    "husky": "^9.0.10",
+    "jest": "^29.7.0",
+    "lint-staged": "^16.1.5",
+    "nodemon": "^3.0.2",
+    "prettier": "^3.3.3",
+    "supertest": "^6.3.4",
     "typescript": "^5.6.3"
   },
   "lint-staged": {
