--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,36 +1,20 @@
 {
-  "name": "BlackRoad Dev",
-  "build": {
-    "dockerfile": "Dockerfile"
-  },
-  "features": {
-    "ghcr.io/devcontainers/features/git:1": {},
-    "ghcr.io/devcontainers/features/node:1": { "version": "lts" },
-    "ghcr.io/devcontainers/features/python:1": { "version": "3.11" },
-    "ghcr.io/devcontainers/features/common-utils:2": {}
-  },
+  "name": "blackroad-workspace",
+  "image": "mcr.microsoft.com/devcontainers/typescript-node:20",
+  "features": { "ghcr.io/devcontainers/features/github-cli:1": {} },
+  "postCreateCommand": "npm i -g pnpm && pnpm i && npx playwright install --with-deps",
   "customizations": {
     "vscode": {
       "extensions": [
-        "ms-python.python",
-        "ms-python.vscode-pylance",
-        "ms-vscode.vscode-typescript-next",
-        "esbenp.prettier-vscode",
-        "ms-azuretools.vscode-docker",
-        "github.vscode-pull-request-github"
-      ],
-      "settings": {
-        "terminal.integrated.defaultProfile.linux": "bash",
-        "editor.formatOnSave": true,
-        "python.analysis.typeCheckingMode": "basic"
-      }
+        "ms-playwright.playwright",
+        "github.copilot",
+        "ms-vscode.remote-repositories",
+        "esbenp.prettier-vscode"
+      ]
     }
   },
-  "postCreateCommand": "python -m pip install -U pip && (pip install -r requirements.txt || true) && (npm i || true)",
-  "forwardPorts": [3000, 4000, 5173, 8000],
-  "remoteUser": "vscode",
-  "updateRemoteUserUID": true,
-  "mounts": [
-    "source=${localWorkspaceFolder}/.cache,target=/workspaces/.cache,type=bind"
-  ]
+  "forwardPorts": [3000, 9229],
+  "remoteEnv": {
+    "PLAYWRIGHT_BROWSERS_PATH": "0"
+  }
 }
