--- a/apps/portals/package.json
+++ b/apps/portals/package.json
@@ -13,6 +13,7 @@
     "@copilotkit/react-ui": "latest",
     "@copilotkit/runtime": "latest",
     "@radix-ui/react-icons": "1.3.0",
+    "@vercel/postgres": "^0.8.0",
     "next": "14.2.3",
     "openai": "latest",
     "react": "18.2.0",
